--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    position: fixed;
+/*     position: fixed; */
     width: 100%;
     top: 0;
     background-color: var(--white);
