--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     align-items: center;
 /*     position: fixed; */
     width: 100%;
-    top: 0;
+/*     top: 0; */
     background-color: var(--white);
     padding: 10px;
 }
