--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    z-index: 9999;
 /*     position: fixed; */
     width: 100%;
 /*     top: 0; */
