--- a/style.css
+++ b/style.css
@@ -27,10 +27,9 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-/*     z-index: 9999; */
-/*     position: fixed; */
+    position: fixed;
     width: 100%;
-/*     top: 0; */
+    top: 0;
     background-color: var(--white);
     padding: 10px;
 }
