--- a/style.css
+++ b/style.css
@@ -236,6 +236,10 @@ footer > span {
 }
 
 @media only screen and (min-width: 768px){
+    body{
+        overflow-x: hidden;
+    }
+    
     #nav-bar{
         flex-direction: row;
         z-index: 9999;
